<resources>
    <string name="app_name">Care365S</string>

    <!-- WELCOME SCREEN STRINGS -->
    <string name="welcome_text">Welcome to Care365S</string>
    <string name="welcome_text1">We will love to help</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_u"><u>Log in</u></string>

    <!-- LOGIN SCREEN STRINGS -->
    <string name="forgot_pass">Forgot Password?</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="login">Login</string>

    <!-- SIGNUP SCREEN STRINGS -->
    <string name="signUpFormTitle">Sign Up</string>
    <string name="add_photo">Add Photo</string>
    <string name="fullname">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- FORGOT PASSWORD SCREEN STRINGS -->
    <string name="forgotPass">Forgot Password</string>
    <string name="enter_your_email">Enter your Email &amp; Phone number</string>
    <string name="cont">Continue</string>

    <!-- ADD PHOTO DIALOG STRINGS -->
    <string name="missing_photo_title">You are missing a photo</string>
    <string name="skip"><u>Skip</u></string>
    <string name="add"><u>Add</u></string>

    <!-- INVITE CODE SCREEN STRINGS -->
    <string name="joining_circle_text">Joining a Circle Enter Your Invite Code</string>
    <string name="get_code_text">Get the code from the person setting up your family\'s circle</string>
    <string name="create_circle_underline"><u>Create Circle</u></string>
    <string name="submit">Submit</string>

    <!-- INVITE CODE SCREEN STRINGS -->
    <string name="access_text">Care365S needs access to your location to place you on your map</string>
    <string name="access_text1">Care365S app will ask for permission the first time it needs to access Location Services data. Tapping Allow will give that app permission to use Location Services as needed.</string>
    <string name="allow_access_button">Allow Access</string>


    <string name="maps_key">AIzaSyCthFyf7q4YxajwfAhE3wNkrSjKRKcGrn4</string>
    <string name="google_maps_key">AIzaSyC2ZME84lOf8mjBRLOkdMEdeIEU3-xp0Tw</string>

    <!-- HOME SCREEN STRINGS -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_members">Members</string>
    <string name="title_create_circle">Create Circle</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="gps_disable">GPS is disabled in your device. Please turn on location of your device</string>
    <string name="turn_on">Turn on</string>
    <string name="exit">Please click back again to exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- CREATE CIRCLE SCREEN STRINGS -->
    <string name="choose_circle_name">Choose the name for your new cirle</string>
    <string name="suggestions">Suggestions</string>

    <!-- SETTINGS SCREEN STRINGS -->
    <string name="notifications">Notifications</string>
    <string name="edit_circle">Edit Circle</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>

    <!-- MESSAGES SCREEN STRINGS -->
    <string name="messages">Messages</string>
    <string name="family_messages">Family Messages</string>

    <!-- NOTIFICATION SCREEN STRINGS -->
    <string name="low_battery_notification">Low Battery Notifications</string>
    <string name="range_alert_notification">Range Alert Notifications</string>

    <!-- EDIT CIRCLE SCREEN STRINGS -->
    <string name="edit_circle_name">Edit Circle Name</string>
    <string name="add_circle_members">Add circle members</string>
    <string name="delete_circle_members">Delete circle members</string>
    <string name="leave_circle">Leave circle</string>
    <string name="delete_circle">Delete circle</string>

    <!-- ACCOUNT SCREEN STRINGS -->
    <string name="edit_user_name">Edit User Name</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>

    <!-- CONTACT US SCREEN STRINGS -->
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <!-- EDIT CIRCLE NAME SCREEN STRINGS -->
    <string name="edit_circle_name_here">Please edit your circle name through below field</string>
    <string name="save">Save</string>

    <!-- SHARE INVITE CODE SCREEN STRINGS -->
    <string name="invite_code">Invite Code</string>
    <string name="share_invite_code_text">Share this invite code with the people you want in your circle</string>
    <string name="send_code">Send Code</string>

    <!-- DELETE CIRCLE MEMBER SCREEN STRINGS -->
    <string name="delete_circle_member">Delete Circle Member</string>

    <!-- EDIT USERNAME SCREEN STRINGS -->
    <string name="edit_username">Edit User Name</string>
    <string name="edit_username_here">Please edit your Username through below field</string>

    <!-- EDIT PHONE SCREEN STRINGS -->
    <string name="edit_phone">Edit Phone Number</string>
    <string name="edit_phone_here">Please edit your Phone Number through below field</string>

    <!-- RESET PASSWORD SCREEN STRINGS -->
    <string name="reset_password">Reset your password</string>
    <string name="recommended_password">We recommended choosing a password with a minimum of six characters and at least one number</string>
    <string name="new_password">New Password</string>

    <!-- LEAVE CIRCLE SCREEN STRINGS -->
    <string name="are_you_sure_to_leave_circle">You will no longer see or share location with this circle. Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- DELETE ACCOUNT SCREEN STRINGS -->
    <string name="delete_acc_info">This will delete your entire account and remove you from all circles on Care365S</string>

    <!-- DELETE CIRCLE SCREEN STRINGS -->
    <string name="are_you_sure_to_delete_circle">You will no longer see or share location with this circle. Are you sure you want to delete this circle?</string>

    <!-- WEEKLY DRIVE REPORT SCREEN STRINGS -->
    <string name="weekly_drive_report">Weekly Drive Report</string>
    <string name="early_today">Early Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="title_activity_complete_maps">Map</string>

    <!-- OTP DIALOG STRINGS -->
    <string name="enter_otp">Please fill the otp, you got at your entered email address.</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_internet">No internet connection. please check your internet setting.</string>


    <string name="text_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>



</resources>
