<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/sevenzero_dp"
                app:srcCompat="@mipmap/welcome_logo" />

            <TextView
                android:id="@+id/tv_welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:gravity="center"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginTop="@dimen/threezero_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:drawablePadding="@dimen/ten_dp"
                android:padding="@dimen/ten_dp"
                android:text="@string/welcome_text"
                android:textColor="@color/welcome_text_color"
                android:textSize="20sp"
                android:shadowColor="@color/black"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1"/>


            <TextView
                android:id="@+id/tv_welcome_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome_text"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:paddingLeft="@dimen/twofive_dp"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/welcome_text1"
                android:shadowColor="@color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="1"/>


            <Button
                android:id="@+id/btn_get_started"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fivezero_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@drawable/bg_rect_solid_rounded"
                android:backgroundTint="@color/colorAccent"
                android:layout_below="@+id/tv_welcome_text1"
                android:paddingLeft="@dimen/fourzero_dp"
                android:paddingRight="@dimen/fourzero_dp"
                android:onClick="onGetStartedClicked"
                android:text="@string/get_started"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/fourzero_dp">

                <TextView
                    android:id="@+id/tv_already_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:text="@string/already_have_account"/>

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:padding="@dimen/five_dp"
                    android:onClick="onLoginClicked"
                    android:text="@string/login_u"/>
            </LinearLayout>



        </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>