<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="485dp"
    android:orientation="vertical"
    android:background="@drawable/bg_add_photo_dialog"
    android:paddingBottom="@dimen/threezero_dp"
    android:layout_margin="@dimen/onefive_dp"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/threezero_dp"
        app:srcCompat="@mipmap/allow_access_icon"/>

    <TextView
        android:id="@+id/tv_access_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/access_text"
        android:layout_marginLeft="@dimen/ten_dp"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/onefive_dp"
        android:paddingLeft="@dimen/twozero_dp"
        android:paddingRight="@dimen/twozero_dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_access_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/access_text1"
        android:layout_marginLeft="@dimen/ten_dp"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/threetwo_dp"
        android:paddingLeft="@dimen/twozero_dp"
        android:paddingRight="@dimen/twozero_dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:text="@string/allow_access_button"
        android:id="@+id/btn_allow_access"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="onAllowAccessClicked"
        android:layout_height="@dimen/fivezero_dp"
        android:layout_below="@+id/et_signup_cfrm_pass"
        android:paddingLeft="@dimen/fourzero_dp"
        android:paddingRight="@dimen/fourzero_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twozero_dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_rect_solid_rounded"
        android:backgroundTint="@color/colorAccent" />

</LinearLayout>