<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_margin="@dimen/twofive_dp"
    android:background="@drawable/bg_add_photo_dialog"
    android:orientation="vertical"
    android:paddingBottom="@dimen/threezero_dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/ten_dp"
            android:text="@string/missing_photo_title"
            android:textColor="@color/colorAccent"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="@dimen/twofive_dp"
        android:text="Photos make it easier for your circle members to spot you on map"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fourzero_dp"
            android:layout_marginRight="@dimen/twofive_dp"
            android:layout_toLeftOf="@id/btn_add"
            android:clickable="true"
            android:text="@string/skip"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="@dimen/fourzero_dp"
            android:clickable="true"
            android:text="@string/add"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>