<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/iv_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:onClick="onBackClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/header_back_icon" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/edit_circle_name"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/bg_add_photo_dialog"
        android:paddingBottom="@dimen/threezero_dp"
        android:layout_margin="@dimen/onefive_dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ten_dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_circle_name_here"
                android:layout_marginLeft="@dimen/ten_dp"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>

        <View android:layout_height="1dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/onefive_dp"
            android:background="@color/black" />


        <EditText
            android:id="@+id/et_circle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/twozero_dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"/>



        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fivezero_dp"
            android:layout_below="@+id/tv_forgot_pass"
            android:paddingLeft="@dimen/fourzero_dp"
            android:paddingRight="@dimen/fourzero_dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/bg_rect_solid_rounded"
            android:backgroundTint="@color/colorAccent"
            android:onClick="onSaveClicked"
            android:layout_marginTop="@dimen/twozero_dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>